--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_email"
         android:drawableLeft="@drawable/ic_email"
@@ -45,7 +43,7 @@
         android:textColor="#000000"
         android:textColorHint="#808080"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wave" />
 
@@ -78,7 +76,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Forgot password?"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorRed"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +95,7 @@
         android:layout_marginRight="8dp"
         android:background="@drawable/round_bg"
         android:text="Sign In"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textStyle="bold"
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,10 +112,10 @@
         android:layout_marginRight="8dp"
         android:gravity="right"
         android:text=" REGISTER NOW!"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorRed"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorRed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/resgisterMessage"
