--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#FF00BCD4</color>
+    <color name="colorPrimary">#Fbe404</color>
     <color name="colorPrimaryDark">#FF00BCD4</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorRed">#cf3e18</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
