--- a/app/src/main/res/drawable/round_border.xml
+++ b/app/src/main/res/drawable/round_border.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/colorPrimary"
+    <stroke android:color="@color/colorRed"
         android:width="1dp" ></stroke>
     <corners android:radius="100dp"> </corners>
 </shape>
